<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.tsob</groupId>
  <artifactId>MCLang</artifactId>
  <version>1.1.2</version>
  <packaging>pom</packaging>

  <name>MCLang</name>
  <description>For loading vanilla Minecraft language packs</description>

  <modules>
    <module>MCLang-core</module>
    <module>MCLang-API</module>
    <module>MCLang-Finish</module>
    
    <module>MCLang-Antrun</module>
  </modules>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://opensource.org/licenses/MIT</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>0obriano0</name>
      <email>brian041301@gmail.com</email>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:git://github.com/0obriano0/MCLang.git</connection>
    <developerConnection>scm:git:ssh://github.com:0obriano0/MCLang.git</developerConnection>
    <url>https://github.com/0obriano0/MCLang</url>
  </scm>
  <url>https://github.com/0obriano0/MCLang</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>

  <build>
    <plugins>
      <!--   maven-compiler-plugin编译插件  -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.5.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <finalName>MCLang-v${project.version}-package</finalName>
              <relocations>
                <relocation>
                  <pattern>org.bstats</pattern>
                  <shadedPattern>org.tsob.MCLang.shaded.bstats</shadedPattern>
                </relocation>
              </relocations>
              <createDependencyReducedPom>false</createDependencyReducedPom>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!--   central发布插件  -->
      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.4.0</version>
        <extensions>true</extensions>
        <configuration>
        <publishingServerId>central</publishingServerId>
        <tokenAuth>true</tokenAuth>
        </configuration>
      </plugin>
        <!--   source源码插件   官方要求 -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
        <!--   javadoc插件  官方要求  -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.6.3</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <gpgKeyname>${env.GPG_KEY_NAME}</gpgKeyname>
          <gpgPassphrase>${env.GPG_PASSPHRASE}</gpgPassphrase>
          <useAgent>false</useAgent>
        </configuration>
      </plugin>
      <!-- <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>1.5</version>
        <configuration>
          <executable>C:\Program Files (x86)\GnuPG\bin\gpg.exe</executable>
        </configuration>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin> -->
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <includes>
          <include>**/*.properties</include>
          <include>**/*.yml</include>
          <include>**/*.csv</include>
          <include>**/*.txt</include>
          <include>**/*.json</include>
          <include>**/*.xml</include>
        </includes>
        <filtering>true</filtering>
      </resource>
    </resources>
  </build>
</project>


